--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -44,22 +44,33 @@ steps:
   # ==================== BUILD DOCKER IMAGE ====================
   - name: 'gcr.io/cloud-builders/docker'
     id: 'docker-build'
+    entrypoint: 'bash'
     args:
-      - 'build'
-      - '-t'
-      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_SERVICE_NAME}:$SHORT_SHA'
-      - '-t'
-      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_SERVICE_NAME}:latest'
-      - '.'
+      - '-c'
+      - |
+        echo "=================================="
+        echo "🐳 BUILDING DOCKER IMAGE"
+        echo "=================================="
+        docker build \
+          -t ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_SERVICE_NAME}:$SHORT_SHA \
+          -t ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_SERVICE_NAME}:latest \
+          .
+        echo "✅ Docker image built"
     waitFor: ['build']
 
-  # ==================== PUSH TO ARTIFACT REGISTRY ====================
+  # ==================== PUSH DOCKER IMAGE ====================
   - name: 'gcr.io/cloud-builders/docker'
     id: 'docker-push'
+    entrypoint: 'bash'
     args:
-      - 'push'
-      - '--all-tags'
-      - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_SERVICE_NAME}'
+      - '-c'
+      - |
+        echo "=================================="
+        echo "📤 PUSHING TO ARTIFACT REGISTRY"
+        echo "=================================="
+        docker push ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_SERVICE_NAME}:$SHORT_SHA
+        docker push ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_SERVICE_NAME}:latest
+        echo "✅ Images pushed successfully"
     waitFor: ['docker-build']
 
   # ==================== DEPLOY TO CLOUD RUN ====================
@@ -109,6 +120,7 @@ steps:
         echo "Frontend URL: $$URL"
         echo ""
         
+        echo "Testing health endpoint..."
         HTTP_CODE=$$(curl -s -o /dev/null -w "%{http_code}" $$URL/health)
         
         if [ $$HTTP_CODE -eq 200 ]; then
@@ -119,15 +131,19 @@ steps:
         
         echo ""
         echo "========================================="
-        echo "🎉 DEPLOYMENT COMPLETE"
+        echo "🎉 FRONTEND DEPLOYMENT COMPLETE"
         echo "========================================="
         echo ""
-        echo "🌐 Application URL: $$URL"
+        echo "🌐 Frontend URL: $$URL"
+        echo ""
+        echo "📋 Next Steps:"
+        echo "   1. Open the URL in your browser"
+        echo "   2. Verify the application loads"
+        echo "   3. Check backend connectivity"
         echo ""
         echo "========================================="
     waitFor: ['deploy']
 
-# Images to push to Artifact Registry
 images:
   - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_SERVICE_NAME}:$SHORT_SHA'
   - '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPOSITORY}/${_SERVICE_NAME}:latest'
@@ -138,3 +154,4 @@ tags:
   - 'frontend'
   - 'angular'
   - 'cloud-run'
+  - 'angular-products-app'
