--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,6 +6,7 @@ substitutions:
   _CPU: '1'
   _MAX_INSTANCES: '10'
   _MIN_INSTANCES: '0'
+  _TIMEOUT: 300s
 
 options:
   logging: CLOUD_LOGGING_ONLY
